# pointCollection

./: .gitignore  Dockerfile  GeoIndex_demo.ipynb  IndexPicker.py  LICENSE  Qfit.py  README.md  Tile_demo.ipynb  __init__.py  data.py  environment.yml  geoIndex.py  index_glob.py  indexedH5.py  make_mosaic.py  make_tiles.py  map_1415.ipynb  map_CS2_fit.ipynb  point_demo.ipynb  pt_blockmedian.py  pyproject.toml  reconstruct_ATL06_tracks.py  requirements.txt  setup.cfg  setup.py  test.py  tide_demo.ipynb  tile.py
.github/workflows/: python-publish.yml  python-request.yml
ATL06/: __init__.py  data.py  tile.py
ATL11/: __init__.py  data.py
ATM_Qfit/: data.py
CS2_retracked_POCA/: tile.py~
CS2_retracked_SW/: tile.py~
doc/: environment.yml
doc/source/: Citations.md  Install.md  conf.py  index.rst
glah12/: __init__.py~  campaign_bias_correction.py  data.py
grid/: data.py  mosaic.py
indexedH5/: data.py
map/: data.py
notebooks/: GeoIndex_demo.ipynb  Tile_demo.ipynb  map_1415.ipynb  map_CS2_fit.ipynb  point_demo.ipynb  test_grid_register.ipynb  tide_demo.ipynb
pointCollection/: Qfit.py  __init__.py  convert_ITRF.py  data.py  dataPicker.py  geoIndex.py  index_glob.py  is2_calendar.py  points_to_grid.py  ps_scale_for_lat.py  pt_blockmedian.py  tile.py  tiling.py  tilingSchema.py  xover_search.py
pointCollection/ATL06/: data.py  tile.py
pointCollection/ATL11/: __init__.py  crossover_data.py  data.py  demo.py
pointCollection/ATL11_prerelease/: crossover_data.py  data.py
pointCollection/ATM_ICESSN/: data.py  from_text.py
pointCollection/ATM_Qfit/: data.py
pointCollection/ATM_WF/: data.py
pointCollection/CS2/: data.py
pointCollection/CS2_retracked_POCA/: __init__.py  tile.py
pointCollection/CS2_retracked_SW/: tile.py
pointCollection/CS2_wfm/: data.py
pointCollection/glah06/: data.py
pointCollection/glah12/: __init__.py  campaign_bias_correction.py
pointCollection/grid/: DEM_date.py  WV_date.py  __init__.py  blend.py  data.py  fill_edges.py  mosaic.py
pointCollection/indexedH5/: __init__.py  data.py
pointCollection/scripts/: IndexPicker.py  cross_ATL06_tile.py  cross_ATL11_tile.py  fix_indices.py  index_glob.py  make_mosaic.py  make_tiles.py  reduce_ATM.py  uproot_geoindex.py
pointCollection/tools/: RDE.py  along_track_coords.py  bin_rows.py  calc_bias_and_R.py  convert_ITRF.py  in_axes.py  interp_pts_from_grid.py  pt_blockmedian.py  register_grid.py  resample_path.py  xovers_vector.py
scripts/: IndexPicker.py  cross_ATL06_tile.py  cross_ATL11_tile.py  fix_indices.py  index_glob.py  make_mosaic.py  make_tiles.py  points_to_grid.py  reduce_ATM.py  uproot_geoindex.py
test/: test_geoindex.py  test_point.py
test_data/for_geoindex/: data_-10.h5  data_-20.h5  data_-30.h5  data_-40.h5  data_0.h5  data_10.h5  data_20.h5  data_30.h5  data_40.h5
tests/: test_data.py
